--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = D:\\Documents\\RAD Studio\\Components\\DGHCustomSynEditControls
 [submodule "SynEdit 2.1.0"]
 	path = SynEdit 2.1.0
-	url = D:\\Documents\\RAD Studio\\Library\\SynEdit 2.1.0
+url=https://github.com/DGH2112/SynEdit-2-1-0-with-Theming
