--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@ url=https://github.com/DGH2112/DGHCustomSynEditControls
 [submodule "SynEdit 2.1.0"]
 	path = SynEdit 2.1.0
 url=https://github.com/DGH2112/SynEdit-2-1-0-with-Theming
+[submodule "SynEdit"]
+	path = SynEdit
+	url = https://github.com/SynEdit/SynEdit.git
+[submodule "vcl-styles-utils"]
+	path = vcl-styles-utils
+	url = https://github.com/RRUZ/vcl-styles-utils.git
+[submodule "DDetours"]
+	path = DDetours
+	url = https://github.com/MahdiSafsafi/DDetours.git
